Fixed undefined variables
Added JSHint for code linting

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Expression parser and evaluator for CSS preprocessors",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "./node_modules/.bin/jshint && ./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/livestyle/css-expression",
   "devDependencies": {
+    "jshint": "^2.5.10",
     "mocha": "^1.20.1"
   },
   "dependencies": {
